# python-utils

./: .gitignore  README.md  pyproject.toml
python_utils/: functions.py
src/document_readers/: spreadsheet.py
templates/spreadsheets/: sample_xlsx_spreadsheet.xlsx
tests/: conftest.py
tests/document_readers/: test_spreadsheet.py
