[project]
name = "python-utils"
version = "0.1.0"
description = "A collection of utility functions and classes made in python 3.14+"
authors = [
    {name = "Atyla da Silva",email = "atylamendes97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
