[project]
name = "python-utils"
version = "0.1.0"
description = "A collection of utility functions and classes made in python 3.14+"
authors = [
    {name = "Atyla da Silva",email = "atylamendes97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
